# script-runner

./: Cargo.toml  README.md
apps/: Meu app.sh
apps/parts/: Meu app Dentro.sh
scripts/: teste1 copy.sh  teste1.sh
src/: main.rs  runner.rs
