[package]
name = "script-runner"
version = "0.1.310"
edition = "2021"

[prifile.release]
lto = true
strip = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
owo-colors = "3.5.0"
walkdir = "2.3.3"
